--- a/fluentd/conf/fluent.conf
+++ b/fluentd/conf/fluent.conf
@@ -27,4 +27,14 @@
   <store>
     @type stdout
   </store>
+  <store>
+    @type file
+    path /fluentd/log
+    compress gzip
+    <buffer>
+      timekey 1d
+      timekey_use_utc true
+      timekey_wait 10m
+    </buffer>
+  </store>
 </match>
