--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,33 @@
 version: "3"
 
+volumes:
+  esdata:
+
 services:
+  elasticsearch:
+    image: elasticsearch:7.17.0
+    expose:
+      - 9200
+    environment:
+      - discovery.type=single-node
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+
+  kibana:
+    image: kibana:7.17.0
+    depends_on:
+      - elasticsearch
+    ports:
+      - 5601:5601
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+
   fluentd:
     build: ./fluentd
-    ports:
-      - 8090:8090
-      - 8090:8090/udp
+    depends_on:
+      - elasticsearch
+    expose:
+      - 8090
     volumes:
       - ./fluentd/log:/fluentd/log
   
