--- a/fluentd/conf/fluent.conf
+++ b/fluentd/conf/fluent.conf
@@ -11,19 +11,19 @@
 
 <match **>
   @type copy
-  # <store>
-  #   @type elasticsearch
-  #   host elasticsearch
-  #   port 9200
-  #   index_name fluentd
-  #   type_name fluentd
-  #   logstash_format true
-  #   logstash_prefix fluentd
-  #   logstash_dateformat %Y%m%d
-  #   include_tag_key true
-  #   tag_key @log_name
-  #   flush_interval 1s
-  # </store>
+  <store>
+    @type elasticsearch
+    host elasticsearch
+    port 9200
+    index_name fluentd
+    type_name fluentd
+    logstash_format true
+    logstash_prefix fluentd
+    logstash_dateformat %Y%m%d
+    include_tag_key true
+    tag_key @log_name
+    flush_interval 1s
+  </store>
   <store>
     @type stdout
   </store>
