--- a/dotnet_telegram_bot/Telebot.ConsoleApp/Telebot.ConsoleApp.csproj
+++ b/dotnet_telegram_bot/Telebot.ConsoleApp/Telebot.ConsoleApp.csproj
@@ -9,5 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="Telegram.Bot" Version="17.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
+    <PackageReference Include="OpenTelemetry" Version="1.3.0" />
+    <PackageReference Include="OpenTelemetry.Exporter.Prometheus" Version="1.3.0-rc.2" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc9.4" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="0.2.0-alpha.1" />
   </ItemGroup>
 </Project>
